--- a/newspaper.html
+++ b/newspaper.html
@@ -36,7 +36,7 @@
                                     <tr valign="top">
                                         <td width="33%">
                                             <h2><font size="4">ARTIFICIAL INTELLIGENCE SURPASSES HUMAN COGNITION</font></h2>
-                                            <img src="C:\Users\f4rha\Downloads\ai brain.jpg" alt="Illustration of an AI brain" width="100%">
+                                            <img src="webdes/assignment/ai brain.jpg" alt="Illustration of an AI brain" width="100%">
                                             <p><i><font size="2">An artist's rendition of the new AI cognitive model</font></i></p>
                                             <p><font size="3">In a groundbreaking development, scientists at the Global Institute of Technology have created an artificial intelligence system that has demonstrably surpassed human cognitive abilities in a wide range of tasks. The system, dubbed "CogniTron," has shown remarkable prowess in problem-solving, creative thinking, and even emotional intelligence.</font></p>
                                             <p><font size="3">Dr. Elizabeth Turing, lead researcher on the project, stated, "This is a pivotal moment in human history. CogniTron represents a new era of intelligence that will undoubtedly reshape our society in ways we can scarcely imagine."</font></p>
