--- a/landingpage.html
+++ b/landingpage.html
@@ -48,7 +48,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>SRN: PES1UG24CA049/h1>
+        <h1>SRN: PES1UG24CA049</h1>
         <div class="links">
             <a href="webdes-assignment/newspaper.html" class="link" data-color="#ff6b6b">Newspaper</a>
             <a href="webdes-assignment/index.html" class="link" data-color="#4ecdc4">Travel Blog</a>
