--- a/landingpage.html
+++ b/landingpage.html
@@ -50,11 +50,11 @@
     <div class="container">
         <h1>SRN: PES1UG24CA049</h1>
         <div class="links">
-            <a href="webdes-assignment/newspaper.html" class="link" data-color="#ff6b6b">Newspaper</a>
-            <a href="webdes-assignment/index.html" class="link" data-color="#4ecdc4">Travel Blog</a>
-            <a href="webdes-assignment/studentinfoportal.html" class="link" data-color="#45aaf2">Student Info Portal</a>
-            <a href="webdes-assignment/form.html" class="link" data-color="#a55eea">Form</a>
-            <a href="webdes-assignment/table.html" class="link" data-color="#26de81">Table</a>
+            <a href="newspaper.html" class="link" data-color="#ff6b6b">Newspaper</a>
+            <a href="index.html" class="link" data-color="#4ecdc4">Travel Blog</a>
+            <a href="studentinfoportal.html" class="link" data-color="#45aaf2">Student Info Portal</a>
+            <a href="form.html" class="link" data-color="#a55eea">Form</a>
+            <a href="table.html" class="link" data-color="#26de81">Table</a>
         </div>
     </div>
 
