--- a/index.html
+++ b/index.html
@@ -3,48 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Interactive Landing Page</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            color: #fff;
-        }
-        .container {
-            text-align: center;
-            padding: 2rem;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 15px;
-            backdrop-filter: blur(10px);
-            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-        }
-        h1 {
-            margin-bottom: 2rem;
-        }
-        .links {
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-        }
-        .link {
-            padding: 1rem;
-            background: rgba(255, 255, 255, 0.2);
-            border-radius: 8px;
-            text-decoration: none;
-            color: #fff;
-            font-weight: bold;
-            transition: all 0.3s ease;
-        }
-        .link:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-        }
-    </style>
+    <title>Travel Blog</title>
 </head>
 <body bgcolor="#f0f0f0" text="#333333">
     <nav align="center">
@@ -55,7 +14,7 @@
     <h1 align="center"><font color="#2c3e50" size="6">Welcome to Our Kashmir</font></h1>
     
     <p align="center">
-        <img src="C:\Users\f4rha\Downloads\animals\kashmir.jpeg" alt="Map of Jammu and Kashmir" width="700" height="500">
+        <img src="kashmir.jpeg" alt="Map of Jammu and Kashmir" width="700" height="500">
     </p>
     <p align="center"><i>Explore the beautiful destinations of Jammu and Kashmir</i></p>
 
@@ -63,7 +22,7 @@
     
     <div align="center">
         <h3><font color="#1a5f7a">Gulmarg: The Meadow of Flowers</font></h3>
-        <img src="C:\Users\f4rha\Downloads\animals\gulfcourse.png" alt="Gulmarg Golf Course" width="600" height="500">
+        <img src="gulfcourse.png" alt="Gulmarg Golf Course" width="600" height="500">
         <p><font face="Arial, sans-serif">Discover the beauty of Gulmarg, a stunning hill station and popular skiing destination in the western Himalayas.</font></p>
         <p><a href="gulmarg.html"><font color="#1a5f7a">Read More About Gulmarg</font></a></p>
     </div>
@@ -77,6 +36,6 @@
 
     <hr color="#1a5f7a" size="3">
 
-    <p align="center"><font color="#666666" size="2" face="Arial, sans-serif">&copy; 2023 Travel Blog. All rights reserved.</font></p>
+    <p align="center"><font color="#666666" size="2" face="Arial, sans-serif">&copy; 2024 Travel Blog. All rights reserved.</font></p>
 </body>
 </html>
