--- a/studentinfoportal.html
+++ b/studentinfoportal.html
@@ -6,7 +6,7 @@
     <title>Student Information Portal</title>
 </head>
 <body>
-    <h5 align="center">PES1UG24CA049</h5>
+    <h5>PES1UG24CA049</h5>
     <h1>Student Information Portal</h1>
     
     <a href="#">Alumni Profile</a> | <a href="#">New Admission</a>
