--- a/newspaper.html
+++ b/newspaper.html
@@ -36,25 +36,25 @@
                                     <tr valign="top">
                                         <td width="33%">
                                             <h2><font size="4">ARTIFICIAL INTELLIGENCE SURPASSES HUMAN COGNITION</font></h2>
-                                            <img src="webdes/assignment/ai brain.jpg" alt="Illustration of an AI brain" width="100%">
+                                            <img src="wai brain.jpg" alt="Illustration of an AI brain" width="100%">
                                             <p><i><font size="2">An artist's rendition of the new AI cognitive model</font></i></p>
                                             <p><font size="3">In a groundbreaking development, scientists at the Global Institute of Technology have created an artificial intelligence system that has demonstrably surpassed human cognitive abilities in a wide range of tasks. The system, dubbed "CogniTron," has shown remarkable prowess in problem-solving, creative thinking, and even emotional intelligence.</font></p>
                                             <p><font size="3">Dr. Elizabeth Turing, lead researcher on the project, stated, "This is a pivotal moment in human history. CogniTron represents a new era of intelligence that will undoubtedly reshape our society in ways we can scarcely imagine."</font></p>
                                             <hr width="100%" size="1" color="#2c2c2c">
                                             <h2><font size="4">BITCOIN REPLACES NATIONAL CURRENCIES</font></h2>
-                                            <img src="C:\Users\f4rha\Downloads\bitcoin.jpg" alt="Microscopic view of nanobots" width="100%">
+                                            <img src="bitcoin.jpg" alt="Microscopic view of nanobots" width="100%">
                                             <p><i><font size="2">An artist's rendition of the new Bitcoin coin seen as a new form of currency.</font></i></p>
                                             <p><font size="3">Bitcoin, the world's leading cryptocurrency, has officially replaced national currencies in several countries, including Japan and Switzerland. The shift has been met with mixed reactions, with some praising the decentralized nature of Bitcoin as a more secure and transparent alternative to traditional banking systems, while others express concerns about the volatility and lack of regulation in the crypto market.</font></p>
                                             <p><font size="3">Experts predict that Bitcoin's dominance will continue to grow, potentially leading to a global shift in financial systems. However, the transition has also sparked debates about the future of central banking and the role of governments in managing financial stability.</font></p>                                        </td>
                                         <td width="33%" style="border-left: 1px solid #2c2c2c; border-right: 1px solid #2c2c2c;">
                                             <h2><font size="4">FLYING AUTOMOBILES TAKE TO THE SKIES</font></h2>
-                                            <img src="C:\Users\f4rha\Downloads\flyingauto.jpg" alt="Sketch of a flying automobile" width="100%">
+                                            <img src="flyingauto.jpg" alt="Sketch of a flying automobile" width="100%">
                                             <p><i><font size="2">A conceptual drawing of the new AeroMobile</font></i></p>
                                             <p><font size="3">The long-awaited dream of personal flying vehicles has finally become a reality. AeroTech Industries unveiled their first commercially available flying automobile, the AeroMobile, at the International Transportation Expo in New York City.</font></p>
                                             <p><font size="3">The AeroMobile, powered by advanced electric propulsion systems and guided by AI navigation, promises to revolutionize urban transportation. Early adopters can expect to take to the skies as early as next month, pending regulatory approvals.</font></p>
                                             <hr width="100%" size="1" color="#2c2c2c">
                                             <h2><font size="4">ROBOTS TAKE OVER MANY JOBS</font></h2>
-                                            <img src="C:\Users\f4rha\Downloads\barista robo.jpg" alt="Microscopic view of nanobots" width="100%">
+                                            <img src="barista robo.jpg" alt="Microscopic view of nanobots" width="100%">
                                             <p><i><font size="2">A robot taking over a human job, as seen in a dystopian future. A Barista robot at the local coffee shop serving coffee to human customers.</font></i></p>
                                             <p><font size="3">The introduction of AI-powered robots in the service industry has led to a significant shift in the job market. Many traditional jobs, such as barista, have been replaced by advanced robotic systems, leading to concerns about job security and the future of human employment.</font></p>
                                             <p><font size="3">"While it's true that many jobs are being automated, it's also creating new opportunities for humans to focus on more creative and strategic roles," said Dr. Elon Musk, CEO of AI Robotics.</font></p>
@@ -66,12 +66,12 @@
                                             <p><font size="3">"With the Quantum Internet, we're not just improving communication speeds—we're fundamentally changing the nature of global connectivity," said Dr. Schrödinger Wong, CEO of Quantum Internet Corporation.</font></p>
                                             <hr width="100%" size="1" color="#2c2c2c">
                                             <h2><font size="4">NANOBOTS SUCCESSFULLY REVERSE AGING IN HUMAN TRIALS</font></h2>
-                                            <img src="C:\Users\f4rha\Downloads\nanobot.jpg" alt="Microscopic view of nanobots" width="100%">
+                                            <img src="nanobot.jpg" alt="Microscopic view of nanobots" width="100%">
                                             <p><i><font size="2">Nanobots at work, as seen through an electron microscope</font></i></p>
                                             <p><font size="3">A team of bioengineers at the Longevity Institute has reported successful human trials of age-reversing nanobots. These microscopic machines, when introduced into the bloodstream, can repair cellular damage and rejuvenate organs, effectively turning back the biological clock.</font></p>
                                             <hr width="100%" size="1" color="#2c2c2c">
                                             <h2><font size="4">A NEW VIRTUAL REALITY EXPERIENCE</font></h2>
-                                            <img src="C:\Users\f4rha\Downloads\vision.jpg" alt="Microscopic view of nanobots" width="100%" height="20%">
+                                            <img src="vision.jpg" alt="Microscopic view of nanobots" width="100%" height="20%">
                                             <p><i><font size="2">The latest in virtual reality technology, the VReality 5000, has been unveiled by VReality Corp. This cutting-edge headset promises a fully immersive experience.</font></i></p>
                                             <p><font size="3">The VReality 5000, developed by VReality Corp, promises a fully immersive experience with advanced graphics and haptic feedback. Users can explore virtual worlds, attend virtual concerts, and even simulate real-world events in a safe and controlled environment.</font></p>    
                                             </td>
