--- a/gulmarg.html
+++ b/gulmarg.html
@@ -94,7 +94,7 @@
     - Backpack for carrying essentials on the slopes
     - Camera or GoPro for capturing memories
     </font></pre>
-    <p align="center"><font color="#666666" size="2" face="Arial, sans-serif">&copy; 2024 Travel Blog. All rights reserved.</font></p>
+    <p align="center"><font color="#666666" size="2" face="Arial, sans-serif">&copy; 2024 Farhan's Travel Blog. All rights reserved.</font></p>
 
 </body>
 </html>
