--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
 
     <hr color="#1a5f7a" size="3">
 
-    <p align="center"><font color="#666666" size="2" face="Arial, sans-serif">&copy; 2024 Travel Blog. All rights reserved.</font></p>
+    <p align="center"><font color="#666666" size="2" face="Arial, sans-serif">&copy; 2024 Farhan's Travel Blog. All rights reserved.</font></p>
 </body>
 </html>
