--- a/landingpage.html
+++ b/landingpage.html
@@ -79,7 +79,7 @@
             });
         });
     </script>
-    <p align="center"><font size="3"><b>© Farhan's Assignment - All Rights Reserved.</b></font></p>
+    <p valign="bottom"><font size="3"><b>© Farhan's Assignment - All Rights Reserved.</b></font></p>
 
 </body>
 </html>
